# hypermodern-python

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst
src/hivetool/: __init__.py  wikipedia.py
src/hypermodern_python/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_wikipedia.py
