[tool.poetry]
name = "Hivetool"
version = "0.1.0"
description = "Hivetool tracks the prices of beekeeping equipment from a
variety of different websites."
authors = ["Jason Paris <paris3200@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
