[tool.poetry]
name = "Hivetool"
version = "0.1.0"
description = "Hivetool tracks the prices of beekeeping equipment from a variety of different websites."
authors = ["Jason Paris <paris3200@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"
desert = "^2020.11.18"
marshmallow = "^3.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.812"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.7.0"
xdoctest = "^0.15.4"
Sphinx = "^3.5.3"
sphinx-autodoc-typehints = "^1.11.1"

[tool.poetry.scripts]
hivetool = "hivetool.cli:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hivetool"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
